2008-01-01  Guillem Jover  <guillem@debian.org>

	* src/archives.c (archivefiles): Remove pointless strdup for execvp
	arguments.

2008-01-01  Ian Zimmerman  <itz@buug.org>

	* scripts/install-info.pl: Ignore wrapped lines when matching
	section titles.

2008-01-01  John Zaitseff  <J.Zaitseff@zap.org.au>

	* dselect/baselist.cc (baselist::wordwrapinfo): Stop processing when
	exceeding infopad line limit, and add a warning message.

2008-01-01  Sven Rudolph  <sr1@loom.sax.de>

	* dselect/baselist.cc (baselist::startdisplay): Set helpscreen_attr
	on monochrome terminals.

2007-12-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg.pm: Add a warning to avoid adding unnecessary stuff
	in that module.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg.pm (%EXPORT_TAGS, @EXPORT_OK): Remove.
	(@comp_supported, %comp_supported, %comp_ext, $comp_regex): Move
	variables ...
	* scripts/Dpkg/Compression.pm: ... here. New file.
	* scripts/dpkg-genchanges.pl: Use new module Dpkg::Compression
	instead of tag from Dpkg.
	* scripts/dpkg-source.pl: Likewise
	* scripts/Makefile.am (nobase_dist_perllib_DATA): Add
	'Dpkg/Compression.pm'.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm: Blacklist some armel specific
	symbols (__exidx_end, __exidx_start).

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* Makefile.am: Add some missing files in EXTRA_DIST. And add a
	dist-hook rule to check that all files contained in the git
	repository (except .gitignore) are included in the dist tarball.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Bump version to 1.14.15~.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Release 1.14.14.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* debian/control: Bump dpkg dependency to >= 1.14.13 in dpkg-dev
	as dpkg-source needs the latest Dpkg.pm.
	* debian/control: Add libio-string-perl to Build-Depends as it's