@@ -22,6 +22,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
     Closes: #214684
     Thanks to Andreas Metzler and Ian Zimmerman.
   * Do not use strdup for execvp arguments. Closes: #379027
+  * Do not print 'failed to kill' warning in start-stop-daemon when polling
+    the pid. Closes: #157305, #352554
+    Thanks to Samuel Thibault.
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
