@@ -1,3 +1,8 @@
+2008-01-01  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* utils/start-stop-daemon.c (do_stop): Do not print 'failed to kill'
+	warning when doing pid polling.
+
 2008-01-01  Guillem Jover  <guillem@debian.org>
 
 	* src/archives.c (archivefiles): Remove pointless strdup for execvp
